feat: implemented cors and swagger authorization
