# app/swagger/swagger.json
@@ -1,222 +1,268 @@
 {
-  "swagger":"2.0",
+  "swagger": "2.0",
   "info": {
-    "title": "Employee Payroll App ",
-    "description": "Employee Payoll App API",
-    "version": "1.0.0"
+    "version": "1.0.0",
+    "title": "Employee Payroll App",
+    "description": "Employee Payroll Application API",
+    "license": {
+      "name": "MIT",
+      "url": "https://opensource.org/licenses/MIT"
+    }
   },
-  "host": "localhost:3000",
+  "host": "localhost:4000",
   "basePath": "/",
-  "tags": [],
+  "tags": [
+    {
+      "name": "Users",
+      "description": "API for users in the system"
+    }
+  ],
   "schemes": [
     "http"
   ],
+  "consumes": [
+    "application/json"
+  ],
+  "produces": [
+    "application/json"
+  ],
   "paths": {
-    "/employees": {
-      "post": {
-        "tags": [],
-        "description": "",
-        "parameters": [
-          {
-            "name": "create new employee",
-            "in": "body",
-            "required": true,
-            "schema": {
-                "$ref": "#/definitions/Employee"
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/getEmployees": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [
-
-        ],
-        "responses": {
-          "200":{
-            "description":"successfull"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/getEmployee/{employeeId}": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [
-          {
-            "name": "employeeId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200":{
-            "description":"successfull"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/updateEmployee/{employeeId}": {
-      "put": {
-        "tags": [],
-        "description": "",
-        "parameters": [
-          {
-            "name": "employeeId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "updated employee",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/Employee"
-          }
-        }
-        ],
-        "responses": {
-          "200":{
-            "description":"successfull"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/deleteEmployee/{employeeId}": {
-      "delete": {
-        "tags": [],
-        "description": "",
-        "parameters": [
-          {
-            "name": "employeeId",
-            "in": "path",
-            "required": true,
-            "type": "string"            
-          }
-        ],
-        "responses": {
-          "200":{
-            "description":"successfull"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
     "/registerEmp": {
       "post": {
-        "tags": [],
-        "description": "",
+        "tags": [
+          "Register"
+        ],
+        "description": "Create new user in system",
         "parameters": [
           {
-            "name": "register new user",
+            "name": "Register",
             "in": "body",
-            "required": true,
+            "description": "User that we want to create",
             "schema": {
-                "$ref": "#/definitions/User"
+              "$ref": "#/definitions/register"
             }
           }
         ],
+        "produces": [
+          "application/json"
+        ],
+        "schema": {
+          "$ref": "#/definitions/register"
+        },
         "responses": {
-          "201": {
-            "description": "User Registered"
+          "200": {
+            "description": "New user is created"
           },
+          
           "400": {
             "description": "Bad Request"
           },
+          
           "500": {
-            "description": "Internal Server Error"
+            "description": "Internal server error"
           }
         }
       }
     },
     "/empLogin": {
       "post": {
-        "tags": [],
-        "description": "",
+        "tags": [
+          "login"
+        ],
+        "description": "login user in system",
         "parameters": [
           {
-            "name": "Login Details",
+            "name": "login",
+            "in": "body",
+            "description": "User that we want to login",
+            "schema": {
+              "$ref": "#/definitions/login"
+            }
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "schema": {
+          "$ref": "#/definitions/login"
+        },
+        "responses": {
+          "200": {
+            "description": "New login"    
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          
+          "500": {
+            "description": "Internal server error"
+          }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ]
+      }
+    },
+    "/readAllData": {
+      "get": {
+        "tags": ["read"],
+        "description": "read user data from system",
+        "parameters": [],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"    
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+  
+          "404": {
+            "description": "Not found"
+          },
+  
+          "401": {
+            "description": "Authorisation error"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        },
+        "security": [{
+            "JWT": []
+        }]
+      }
+    },
+
+    "/readDataById/{empId}": {
+      "get": {
+        "tags": [
+          "readById"
+        ],
+        "description": "read user data by id from system",
+        "parameters": [
+          {
+            "name": "empId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"    
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+  
+          "404": {
+            "description": "Not found"
+          },
+  
+          "500": {
+            "description": "Internal server error"
+          }
+        },
+        "security":[{
+          "JWT" :[]
+        }]
+      }
+    },
+    "/updateEmp/{empId}": {
+      "put": {
+        "tags": [
+          "updateById"
+        ],
+        "description": "update user data by id from system",
+        "parameters": [
+          {
+            "name": "empId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "Updated Details",
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/UserLogin"
+              "$ref": "#/definitions/register"
+            }
           }
-        }
+        ],
+        "produces": [
+          "application/json"
         ],
         "responses": {
-          "200":{
-            "description":"Login Successfull"
+          "200": {
+            "description": "Success"    
           },
+          "400": {
+            "description": "Bad Request"
+          },
+  
           "404": {
-            "description": "Not Found"
+            "description": "Not found"
+          },
+  
+          "500": {
+            "description": "Internal server error"
           }
-        }
+        },
+        "security":[{
+          "JWT" :[]
+        }]
+      }
+    },
+    "/deleteEmp/{empId}": {
+      "delete": {
+        "tags": [
+          "deleteById"
+        ],
+        "description": "delete user data by id from system",
+        "parameters": [
+          {
+            "name": "empId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"    
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+  
+          "404": {
+            "description": "Not found"
+          },
+  
+          "500": {
+            "description": "Internal server error"
+          }
+        },
+        "security":[{
+          "JWT" :[]
+        }]
       }
     }
   },
   "definitions": {
-    "Employee": {
+    "register": {
       "type": "object",
       "properties": {
         "firstName": {
@@ -231,35 +277,26 @@
         "password": {
           "type": "string"
         }
+        
       }
     },
-    "User": {
+    "login": {
       "type": "object",
       "properties": {
-        "firstName": {
-          "type": "string"
+        "email" : {
+          "type" :"string"
         },
-        "lastName": {
-          "type": "string"
-        },
-        "emailId": {
-          "type": "string"
-        },
-        "password": {
-          "type": "string"
+      "password": {
+        "type": "string"
         }
       }
-    },
-    "UserLogin":{
-      "type": "object",
-      "properties": {
-        "emailId": {
-          "type": "string"
-        },
-        "password": {
-          "type": "string"
-        }
-      }  
+    } 
+  },
+  "securityDefinitions" : {
+    "JWT" : {
+      "type": "apiKey",
+      "name": "token",
+      "in": "header"
     }
   }
 }
